--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 
 <body>
+    <div id="playground" class="playground"> 
+        <div class="centered", id="screen">
+        <button class="startButton", id="startButton">START</button>
     <script type="module">
         import { main } from './src/game.js'
-
         main()
     </script>
+    </div>
 </body>
 
 </html>
