--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="module" src="/src/main.js"></script><!--main script-->
 
 <body>
-
+    
 
     <div id="playground" class="playground">
 
@@ -29,6 +29,7 @@
             <div id="fps">FPS: 0</div>
             <div id="thePlayer"></div> <!--PLAYER CHARACTER-->
             <div id="levelTarget"></div> <!--LEVEL GOAL-->
+            <div id="theThief"></div>
         </div>
 
         <h3 hidden="hidden">Juss Märtson & Joel Meeks</h3>
