--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div id="thePlayer"></div> <!--PLAYER CHARACTER-->
             <div id="levelTarget"></div> <!--LEVEL GOAL-->
             <div id="theThief"></div>
+            <div id="floors"></div>
         </div>
 
         <h3 hidden="hidden">Juss Märtson & Joel Meeks</h3>
