--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="thePlayer"></div> <!--PLAYER CHARACTER-->
                 <div id="levelTarget"></div> <!--LEVEL GOAL-->
                 <div id="theThief"></div> <!--DONKEY KONG-->
-                <div id="enemies">
+                <div id="enemies"> <!--BARRELS--> 
                     <div id="theEnemy" class="theEnemy" style="background-image:url(/images/brown_dog.gif); left:30%;"></div>
                     <div id="theEnemy" class="theEnemy" style="background-image:url(/images/black_dog.gif);"></div>
                 </div>
