--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
         <div id="playground" class="menu">
-            <img id="toggleMusic" src="images/music_on.png">
-            <img id="togglePause" src="images/pause.png" hidden="hidden">
-            <img id="backToMenu" src="images/exit.png" hidden="hidden">
+            <img id="toggleMusic" src="images/hud/music_on.png">
+            <img id="togglePause" src="images/hud/pause.png" hidden="hidden">
+            <img id="backToMenu" src="images/hud/exit.png" hidden="hidden">
             <div class="centered" , id="screen">
                 <button id="startButton">START GAME</button>
                 <button id="creditsButton">CREDITS</button>
@@ -27,8 +27,8 @@
                 <div id="levelTarget"></div> <!--LEVEL GOAL-->
                 <div id="theThief"></div> <!--DONKEY KONG-->
                 <div id="enemies"> <!--BARRELS--> 
-                    <div id="theEnemy" class="theEnemy" style="background-image:url(/images/brown_dog.gif); left:30%;"></div>
-                    <div id="theEnemy" class="theEnemy" style="background-image:url(/images/black_dog.gif);"></div>
+                    <div id="theEnemy" class="theEnemy" style="background-image:url(/images/characters/villains/black_dog.gif); left:30%;"></div>
+                    <div id="theEnemy" class="theEnemy" style="background-image:url(/images/characters/villains/brown_dog.gif);"></div>
                 </div>
                 <div id="floors"></div>
             </div>
