--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <title>PÄKAPIKK JA KURI KOLL</title>
+    <link rel="icon" href="/images/icon.gif" type="image/gif">
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
