--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                 <img id="lives">
 
                 <div id="character"></div>
-                <div hidden  id="theBadGuy"></div>
+                <div id="enemies">
+                </div>
 
-                <div hidden id="theAttackers"></div>
-                <div hidden id="theAttackers", style="background-image:url(images/characters/villains/brown_dog.gif); left: 300; top:160;"></div>
                 
 
                 <div hidden id="leprecoin"></div>
