--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <title>PÄKAPIKK JA KURI KOLL</title>
     <link rel="icon" href="/images/icon.gif" type="image/gif">
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="preload" href="../images/icon.png" as="image">
+
+    <script src="/preload.js"></script>
+    <script type="module" src="/src/main.js"></script><!--main script-->
 </head>
 
-<script type="module" src="/src/main.js"></script><!--main script-->
 
 <body>
     <div style="position:absolute; width:99vw; overflow: hidden;">
         <div class="inner">
+
+            <div class="welcome" id="welcome-screen" hidden>
+                <img id="EST" src="images/languages/EST.png" style="left:0">
+                <img id="ENG" src="images/languages/ENG.png" style="left:640">
+            </div>
+
+
             <div class="menu" id="start-menu">
                 <button id="startButton">START GAME</button>
                 <button id="creditsButton">CREDITS</button>
@@ -20,20 +30,28 @@
             <img id="backToMenu" src="images/hud/exit.png" hidden>
 
             <div id="playground" class="menu" hidden>
-                <div id="tileMap"></div>
+
                 <div id="timer">00:00</div>
                 <div id="score">SCORE: 0</div>
+                <div class="paused" id="paused-menu" hidden>
+                    <button id="continueButton">Continue (p)</button>
+                    <button id="restartButton">Restart</button>
+                </div>
+                <div class="died" id="death-screen" hidden>
+                    <h1 style="color: yellow;">YOU DIED, WHAT A NOOB!</h1>
+                    <h2 style="color:burlywood" id="currentLevel">Level reached: <h2>
+                    <h2 style="color:red" id="finalScore">SCORE: </h2>
+                    <h2 style="color:white" id="finalTimer">TIME: </h2>
+                    <button id="restartButton">RESTART</button>
+                </div>
+                <div id="tileMap"></div>
                 <div id="fps">FPS: 0</div>
                 <img id="lives">
-
                 <div id="character"></div>
                 <div id="enemies"></div>
                 <div id="flyingEnemies"></div>
-
-        
-                <div hidden id="leprecoin"></div>
             </div>
-     
+
 
         </div>
 
