--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <div id="timer">00:00</div>
                 <div id="score">SCORE: 0</div>
                 <div class="paused" id="paused-menu" hidden>
-                    <button id="continueButton">Continue (p)</button>
-                    <button id="restartButton">Restart</button>
+                    <button id="continueButton">CONTINUE (p)</button>
+                    <button id="restartButtonPause">RESTART</button>
                 </div>
                 <div class="died" id="death-screen" hidden>
                     <h1 style="color: yellow;">YOU DIED, WHAT A NOOB!</h1>
                     <h2 style="color:burlywood" id="currentLevel">Level reached: <h2>
                     <h2 style="color:red" id="finalScore">SCORE: </h2>
                     <h2 style="color:white" id="finalTimer">TIME: </h2>
-                    <button id="restartButton">RESTART</button>
+                    <button id="restartButtonDeath">RESTART</button>
                 </div>
                 <div id="tileMap"></div>
                 <div id="fps">FPS: 0</div>
