--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <button id="restartButtonPause">RESTART</button>
                 </div>
                 <div class="died" id="death-screen" hidden>
-                    <h1 style="color: yellow;">YOU DIED, WHAT A NOOB!</h1>
+                    <h1 id="deathMessage" style="color: yellow;">YOU DIED, WHAT A NOOB!</h1>
                     <h2 style="color:burlywood" id="currentLevel">Level reached: <h2>
                     <h2 style="color:red" id="finalScore">SCORE: </h2>
                     <h2 style="color:white" id="finalTimer">TIME: </h2>
@@ -47,7 +47,7 @@
                 <div id="tileMap"></div>
                 <div id="fps">FPS: 0</div>
                 <img id="lives">
-                <div id="character"></div>
+                <div id="character"></div> 
                 <div id="enemies"></div>
                 <div id="flyingEnemies"></div>
             </div>
