--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </div>
                 <div id="tileMap"></div>
                 <div id="fps">FPS: 0</div>
+                <img id="inventory" src="images/hud/inventory.png">
                 <img id="lives">
                 <div id="character"></div> 
                 <div id="enemies"></div>
