--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <div id="elements"></div>
                 <div id="fps">FPS: 0</div>
                 <!--img id="inventory" src="images/hud/inventory.png"-->
-                <div id="bossHealthBar">BOSS HEALTH<br>
+                <div id="bossHealthBar" hidden>BOSS HEALTH<br>
                     <div id="health-bar">
                         <div id="health-level"></div>
                     </div>
                 </div>
-                <div id="gun">0</div>
+                <div id="gun" hidden>0</div>
                 <img id="lives">
                 <div id="character"></div>
                 <div id="enemies"></div>
